--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <html lang="zh-cn" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>This is title</title>
+    <title>1</title>
+    <style>
+        h1 
+        {
+            text-align:center;
+        }
+    </style>
 </head>
 <body>
-    <h1>My website. Although it is not the first one.</h1>
+    <h1>test</h1>
 </body>
 </html>
